--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do Notes</title>
+    <!-- Local CSS -->
     <link rel="stylesheet" href="css.css">
+    <!-- Jqured Link -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-
     <div class="top_div">
-        <h1>JQuery Task</h1>
-        <input id="input" class="inputtag" >
-        <button id="btn" class="add_btn">Add </button>
-        <ul id="ul_div">
+        <div class="main">
+            <h1 class="heading">Jquery Task</h1>
+            <input id="input" class="inputtag">
+            <button id="btn" class="add_btn">Add</button>
+            <ul id="ul_div">
 
-        </ul>
+            </ul>
+        </div>
+
     </div>
 
     <script src="./scrip.js"></script>
